# fastapi-breaking-changes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  schemas.py
scripts/: export_openapi.py
tests/: conftest.py  test_items.py
